--- a/scss/_gral.scss
+++ b/scss/_gral.scss
@@ -1,5 +1,5 @@
-*{
-    margin: o;
+/*configuración general*/
+*{  margin: o;
     padding: 0;
     box-sizing: border-box;
     font-family: "Patrick Hand SC", cursive;
