--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,26 +1,34 @@
-.titulo_listado{
+@mixin titulo{
     text-align: center;
-    color:$colorOscuro;
+    color: $colorOscuro;
 }
+
+.titulo_listado{
+    @include titulo;
+    margin: 25px;
+}
+
+/*configuración del menu*/
 .listado{
-display:flex;
-justify-content: space-evenly;
-align-items:baseline;
-margin: 10px;
-flex-wrap: nowrap;
-width: auto;
-height: auto;
-border: 5px solid black;
-border-radius: 20px;
-background: rgb(52, 42, 38);
-background: radial-gradient(circle, rgb(225, 175, 114) 0%, rgb(186, 141, 86) 50%, rgb(132, 95, 51) 100%);
-.bebidas{
-    order: -1;
-}
-.dulces{
-    order: 0;
+    display:flex;
+    justify-content: space-evenly;
+    align-items:baseline;
+    margin: 10px;
+    flex-wrap: nowrap;
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    border-radius: 20px;
+    background: rgb(178,133,52);
+    background: linear-gradient(180deg, rgba(178,133,52,1) 0%, rgba(222,200,160,1) 50%, rgba(183,104,48,1) 100%);
+    .bebidas{
+        margin: 15px;
     }
-.salados{
-    order: 1;
+    .dulces{
+        margin: 15px;
+    }
+    .salados{
+        margin: 15px;
+        margin-bottom: 30px;
 }
 }
