--- a/scss/_promo.scss
+++ b/scss/_promo.scss
@@ -1,10 +1,15 @@
-.lista_combos{
+/*configuración de la tabla*/
+.lista_combos{ 
+        margin-top: 100px;
+        .titulo_combo{
+            text-align: center;
+            text-decoration: underline;
+            color: $colorOscuro;
+            padding-bottom: 35px;
+        }        
+}
+.tabla{
+    display: flex;
+    justify-content: center;     
     margin: 20px;
-    margin-top: 100px;
-    .titulo_combo{
-        text-align: center;
-        text-decoration: underline;
-        color: $colorOscuro;
-        padding-bottom: 35px;
-    }
 }
