--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,9 +68,10 @@
   grid-template-rows: auto, 2fr, auto;
   gap: 5px;
   grid-template-areas: "titulo" "fotos" "invitacion";
-  /*titulo imagen y texto*/
 }
-.inicio .titulo {
+
+/*titulo imagen y texto*/
+.titulo {
   grid-area: titulo;
   text-align: center;
   font-weight: 500;
@@ -78,19 +79,21 @@
   color: rgb(94, 43, 14);
   margin-top: 3rem;
 }
-.inicio .fotos {
+
+.fotos {
   padding: 40px;
   grid-area: fotos;
   justify-self: center;
   width: 60%;
 }
-.inicio .invitacion {
+
+.invitacion {
   grid-area: invitacion;
   text-align: center;
   padding: 20px;
   color: rgb(94, 43, 14);
 }
-.inicio .invitacion p {
+.invitacion p {
   font-size: 1.2rem;
   font-weight: 300;
 }
